# opencode-stats-tui

./: Cargo.toml  README.md
src/: cost.rs  device.rs  live_watcher.rs  main.rs  overview_stats.rs  session.rs  stats.rs  stats_cache.rs  theme.rs  ui.rs
src/ui/: days_panel.rs  helpers.rs  models_panel.rs  stats_panel.rs
