[package]
name = "opencode-stats-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
rayon = "1.10"  # For parallel data processing
notify = { version = "6.1", default-features = false }   # For file watching (live updates)
bincode = "1.3"  # For fast binary serialization (cache)
parking_lot = "0.12"  # For fast mutexes
log = "0.4"
env_logger = "0.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2"  # For tcflush to clear terminal input buffer

# Faster development builds with some optimizations
[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

# Aggressive optimizations for maximum performance
[profile.release.package."*"]
opt-level = 3

# Optimize dependencies more heavily
[profile.release.build-override]
opt-level = 3
codegen-units = 1
