[package]
name = "opencode-stats-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
rayon = "1.11"
notify = { version = "6.1", default-features = false }
bincode = "1.3"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
rustc-hash = "2.0"
rusqlite = { version = "0.38", features = ["bundled"] }
unicode-width = "0.2"
ureq = { version = "2.10", features = ["json"] }
smallvec = { version = "1.13", features = ["const_generics", "const_new"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"  # For tcflush to clear terminal input buffer

# Faster development builds with some optimizations
[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

# Aggressive optimizations for maximum performance
[profile.release.package."*"]
opt-level = 3

# Optimize dependencies more heavily
[profile.release.build-override]
opt-level = 3
codegen-units = 1
